# CrowdWisdomTrading

./: README.md  pyproject.toml  requirements.txt  unified_products.csv
src/crowdwisdom/: crew.py  main.py
src/crowdwisdom/config/: agents.yaml  tasks.yaml
src/crowdwisdom/tools/: playwright_mcp.py  scrape_mcp_tool.py
