[project]
name = "crowdwisdom"
version = "0.1.0"
description = "crowdwisdom using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
crowdwisdom = "crowdwisdom.main:run"
run_crew = "crowdwisdom.main:run"
train = "crowdwisdom.main:train"
replay = "crowdwisdom.main:replay"
test = "crowdwisdom.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
